--- a/.github/workflows/Owrt23.yml
+++ b/.github/workflows/Owrt23.yml
@@ -11,22 +11,22 @@
 # See /LICENSE for more information.
 #
 
-name: Lede源码小米&红米2100
+name: Openwrt 23.05 
 on:
   repository_dispatch:
   workflow_dispatch:
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/HateTM/openwrt_tpl_ax80
+  REPO_BRANCH: owrt23.05
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: q30.config
+  CONFIG_FILE: Owrt23.config
   DIY_P1_SH: diy-part2.sh
   DIY_P2_SH: diy-part3.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
-  TZ: Asia/Shanghai
+  TZ: Europe/Moscow
 
 jobs:
   build:
