--- a/.github/workflows/Owrt23.yml
+++ b/.github/workflows/Owrt23.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   REPO_URL: https://github.com/HateTM/openwrt_tpl_ax80
-  REPO_BRANCH: owrt23.05
+  REPO_BRANCH: openwrt-23.05
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: Owrt23.config
   DIY_P1_SH: diy-part2.sh
