--- a/.github/workflows/Custom.yml
+++ b/.github/workflows/Custom.yml
@@ -50,7 +50,7 @@ jobs:
         cd openwrt
         git remote add custom ../$CUSTOM_REPO_DIR
         git fetch custom
-        git merge custom/Clean --allow-unrelated-histories -m "Merge custom OpenWrt build."
+        git merge Clean --allow-unrelated-histories -m "Merge custom OpenWrt build."
         # Если используется другая ветка, замените `custom/main` на нужную, например `custom/develop`
 
     - name: Update and Install Feeds
