--- a/.github/workflows/Custom.yml
+++ b/.github/workflows/Custom.yml
@@ -15,14 +15,14 @@ jobs:
     env:
       OPENWRT_VERSION: "v23.05.5"  # Тег релиза OpenWrt
       OPENWRT_REPO: "https://git.openwrt.org/openwrt/openwrt.git"
-      CUSTOM_REPO_URL: "https://github.com/HateTM/Owrt.git"  # Замените на URL вашей репозитории
+      CUSTOM_REPO_URL: "https://github.com/HateTM/openwrt_tpl_ax80.git"  # Замените на URL вашей репозитории
       CUSTOM_REPO_DIR: "Ax80GPT"
 
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # Для возможности работы с ветками и тегами
+        fetch-depth: 3  # Для возможности работы с ветками и тегами
 
     - name: Set up Git
       run: |
