--- a/.github/workflows/Custom.yml
+++ b/.github/workflows/Custom.yml
@@ -26,8 +26,8 @@ jobs:
 
     - name: Set up Git
       run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
+            git config --global user.name "github-actions"
+            git config --global user.email "actions@github.com"
 
     - name: Install Dependencies
       run: |
