--- a/.github/workflows/Default23.yml
+++ b/.github/workflows/Default23.yml
@@ -17,8 +17,8 @@ on:
   workflow_dispatch:
 
 env:
-  REPO_URL: https://github.com/HateTM/openwrt_tpl_ax80
-  REPO_BRANCH: Clean
+  REPO_URL: https://github.com/HateTM/owrr.git
+  REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: Default23.config
   DIY_P1_SH: diy-part2.sh
