--- a/.github/workflows/Default23.yml
+++ b/.github/workflows/Default23.yml
@@ -11,7 +11,7 @@
 # See /LICENSE for more information.
 #
 
-name: Openwrt 23.05 
+name: Default Ow23.05 
 on:
   repository_dispatch:
   workflow_dispatch:
