--- a/.github/workflows/Default23.yml
+++ b/.github/workflows/Default23.yml
@@ -20,7 +20,7 @@ env:
   REPO_URL: https://github.com/HateTM/owrr.git
   REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: Default23.config
+  CONFIG_FILE: AX80.config
   DIY_P1_SH: diy-part2.sh
   DIY_P2_SH: diy-part3.sh
   UPLOAD_BIN_DIR: false
