--- a/.github/workflows/Custom (1).yml
+++ b/.github/workflows/Custom (1).yml
@@ -39,14 +39,14 @@ jobs:
 
     - name: Clone Custom Repository
       run: |
-        git clone $CUSTOM_REPO_URL $CUSTOM_REPO_DIR
+        git clone $CUSTOM_REPO_URL -b 24.10-test $CUSTOM_REPO_DIR
 
     - name: Merge Custom Changes
       run: |
         cd openwrt
         git remote add custom ../$CUSTOM_REPO_DIR
         git fetch custom
-        git rebase custom/24.10-test 
+        git rebase custom/main 
         # Если используется другая ветка, замените `custom/main` на нужную, например `custom/develop`
 
     - name: Update and Install Feeds
