--- a/.github/workflows/Custom (1).yml
+++ b/.github/workflows/Custom (1).yml
@@ -1,4 +1,5 @@
-name: Build OpenWrt 24.10.0 Custom Firmware
+name: Build OpenWrt Snapshot Firmware
+
 
 on:
   repository_dispatch:
@@ -9,21 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      OPENWRT_VERSION: "v24.10.0"  # Тег релиза OpenWrt
       OPENWRT_REPO: "https://git.openwrt.org/openwrt/openwrt.git"
-      CUSTOM_REPO_URL: "https://github.com/HateTM/tplink_archer-ax80-v1.git"  # Замените на URL вашей репозитории
-      CUSTOM_REPO_DIR: "Ax80GPT"
+
 
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # Для возможности работы с ветками и тегами
+        fetch-depth: 0
 
     - name: Set up Git
       run: |
-            git config --global user.name "github-actions"
-            git config --global user.email "actions@github.com"
+        git config --global user.name "github-actions"
+        git config --global user.email "actions@github.com"
 
     - name: Install Dependencies
       run: |
@@ -31,23 +30,13 @@ jobs:
         sudo apt-get install -y build-essential libncurses5-dev libncursesw5-dev \
         zlib1g-dev gawk git gettext libssl-dev xsltproc wget unzip python3 ccache
 
-    - name: Clone Official OpenWrt Repository
+
+    - name: Clone OpenWrt Repository (Snapshot)
       run: |
         git clone $OPENWRT_REPO openwrt
         cd openwrt
-        git checkout tags/$OPENWRT_VERSION -b build-$OPENWRT_VERSION
+        git checkout master
 
-    - name: Clone Custom Repository
-      run: |
-        git clone $CUSTOM_REPO_URL -b 24.10-test $CUSTOM_REPO_DIR
-
-    - name: Merge Custom Changes
-      run: |
-        cd openwrt
-        git remote add custom ../$CUSTOM_REPO_DIR
-        git fetch custom
-        git rebase custom/24.10-test
-        # Если используется другая ветка, замените `custom/main` на нужную, например `custom/develop`
 
     - name: Update and Install Feeds
       run: |
@@ -55,28 +44,22 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
+
     - name: Setup Build Configuration
       run: |
         cd openwrt
-        # Если у вас есть готовый файл .config в вашей репозитории, например в корне
-        # Скопируйте его в директорию OpenWrt
-        # Для этого закомментируйте или удалите строку `make defconfig`, если используете свой .config
+        make defconfig
 
-        if [ -f "../.config" ]; then
-          cp ../.config ./
-        else
-          make defconfig
-        fi
-
-    - name: Build OpenWrt
+    - name: Build OpenWrt (Snapshot)
       run: |
         cd openwrt
         make -j$(nproc) V=s
 
+
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: openwrt-build-${{ github.run_id }}
+        name: openwrt-snapshot-build-${{ github.run_id }}
         path: openwrt/bin/targets/
 
     - name: Cache Ccache
