--- a/.github/workflows/Custom (1).yml
+++ b/.github/workflows/Custom (1).yml
@@ -48,6 +48,7 @@ jobs:
 
     - name: Setup Build Configuration
       run: |
+        cp build.config openwrt/.config
         cd openwrt
         make defconfig
 
