--- a/.github/workflows/Custom (1).yml
+++ b/.github/workflows/Custom (1).yml
@@ -54,6 +54,9 @@ jobs:
       run: |
         cd openwrt
         make defconfig
+        make download -j8
+        find dl -size -1024c -exec ls -l {} \;
+        find dl -size -1024c -exec rm -f {} \;
 
     - name: Build OpenWrt
       run: |
