--- a/.github/workflows/Custom (1).yml
+++ b/.github/workflows/Custom (1).yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      OPENWRT_REPO: "https://git.openwrt.org/openwrt/openwrt.git"
+      OPENWRT_REPO: https://github.com/openwrt/openwrt.git
 
     steps:
     - name: Checkout Repository
