--- a/build.config
+++ b/build.config
@@ -1,34 +1,43 @@
-# Build configuration for board mediatek/filogic/DEVICE_tplink_archer-ax80-v1-ubi
-
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
 CONFIG_TARGET_mediatek_filogic_DEVICE_tplink_archer-ax80-v1-ubi=y
-CONFIG_ALL_KMODS=y
-CONFIG_ALL_NONSHARED=y
 CONFIG_DEVEL=y
 CONFIG_BUSYBOX_CUSTOM=y
-CONFIG_BPF_TOOLCHAIN_BUILD_LLVM=y
-CONFIG_BUILDBOT=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_CROND_SPECIAL_TIMES=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVEHISTORY is not set
 CONFIG_BUSYBOX_CONFIG_FEATURE_PIDOF_SINGLE=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_SYSLOG_INFO=y
+# CONFIG_BUSYBOX_CONFIG_INCLUDE_SUSv2 is not set
+CONFIG_BUSYBOX_CONFIG_PIE=y
 CONFIG_BUSYBOX_CONFIG_PKILL=y
+CONFIG_BUSYBOX_DEFAULT_PIE=y
 CONFIG_IMAGEOPT=y
-CONFIG_INCLUDE_CONFIG=y
 CONFIG_JSON_CYCLONEDX_SBOM=y
 CONFIG_KERNEL_BUILD_DOMAIN="buildhost"
 CONFIG_KERNEL_BUILD_USER="builder"
+# CONFIG_KERNEL_CC_STACKPROTECTOR_REGULAR is not set
+CONFIG_KERNEL_CC_STACKPROTECTOR_STRONG=y
+CONFIG_KERNEL_DEBUG_FS=y
+# CONFIG_KERNEL_DEBUG_INFO is not set
+# CONFIG_KERNEL_ELF_CORE is not set
+# CONFIG_KERNEL_KALLSYMS is not set
+# CONFIG_KERNEL_MAGIC_SYSRQ is not set
+CONFIG_KERNEL_STACKPROTECTOR_STRONG=y
+# CONFIG_KERNEL_SWAP is not set
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
 CONFIG_LIBCURL_HTTP=y
 CONFIG_LIBCURL_HTTP2=y
-CONFIG_LIBCURL_MBEDTLS=y
+CONFIG_LIBCURL_HTTP_AUTH=y
 CONFIG_LIBCURL_NO_SMB="!"
+CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
 CONFIG_LIBCURL_UNIX_SOCKETS=y
+# CONFIG_LUA_ECO_MBEDTLS is not set
+CONFIG_LUA_ECO_OPENSSL=y
 CONFIG_LUCI_LANG_ru=y
+CONFIG_NEED_BPF_TOOLCHAIN=y
 CONFIG_OPENSSL_ENGINE=y
 CONFIG_OPENSSL_ENGINE_BUILTIN=y
 CONFIG_OPENSSL_ENGINE_BUILTIN_DEVCRYPTO=y
@@ -45,147 +54,87 @@ CONFIG_OPENSSL_WITH_SEED=y
 CONFIG_OPENSSL_WITH_SRP=y
 CONFIG_OPENSSL_WITH_TLS13=y
 CONFIG_OPENSSL_WITH_WHIRLPOOL=y
+# CONFIG_PACKAGE_MAC80211_DEBUGFS is not set
+CONFIG_PACKAGE_adblock-fast=y
 # CONFIG_PACKAGE_apk-mbedtls is not set
 CONFIG_PACKAGE_apk-openssl=y
-CONFIG_PACKAGE_attendedsysupgrade-common=y
-CONFIG_PACKAGE_avahi-dbus-daemon=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_bridger=y
 CONFIG_PACKAGE_cgi-io=y
+CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_coreutils-sort=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_dawn=y
 CONFIG_PACKAGE_dbus=y
 # CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_dnsmasq_full_auth=y
 CONFIG_PACKAGE_dnsmasq_full_conntrack=y
 CONFIG_PACKAGE_dnsmasq_full_dhcp=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_dnsmasq_full_dnssec=y
 CONFIG_PACKAGE_dnsmasq_full_nftset=y
 CONFIG_PACKAGE_dnsmasq_full_noid=y
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
+# CONFIG_PACKAGE_dropbear is not set
 CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_f2fsck=y
+CONFIG_PACKAGE_gawk=y
+CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_ip-tiny=m
-CONFIG_PACKAGE_iwinfo=y
-CONFIG_PACKAGE_kmod-asn1-decoder=y
-# CONFIG_PACKAGE_kmod-ath12k is not set
-CONFIG_PACKAGE_kmod-br-netfilter=y
+CONFIG_PACKAGE_jq=y
 CONFIG_PACKAGE_kmod-crypto-crc32=y
 CONFIG_PACKAGE_kmod-crypto-ecb=y
+CONFIG_PACKAGE_kmod-crypto-kpp=y
+CONFIG_PACKAGE_kmod-crypto-lib-chacha20=y
+CONFIG_PACKAGE_kmod-crypto-lib-chacha20poly1305=y
+CONFIG_PACKAGE_kmod-crypto-lib-curve25519=y
+CONFIG_PACKAGE_kmod-crypto-lib-poly1305=y
 CONFIG_PACKAGE_kmod-cryptodev=y
-# CONFIG_PACKAGE_kmod-dahdi is not set
-CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-fs-f2fs=y
-CONFIG_PACKAGE_kmod-fs-ksmbd=y
-CONFIG_PACKAGE_kmod-fs-netfs=y
-CONFIG_PACKAGE_kmod-fs-ntfs3=y
-CONFIG_PACKAGE_kmod-fs-smbfs-common=y
-CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-ifb=y
-CONFIG_PACKAGE_kmod-ip6tables=y
-CONFIG_PACKAGE_kmod-ipt-conntrack=y
-CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
-CONFIG_PACKAGE_kmod-ipt-core=y
-CONFIG_PACKAGE_kmod-ipt-extra=y
-CONFIG_PACKAGE_kmod-ipt-ipopt=y
-CONFIG_PACKAGE_kmod-ipt-offload=y
-# CONFIG_PACKAGE_kmod-ipt-rtpengine is not set
+CONFIG_PACKAGE_kmod-leds-lp5523=y
+CONFIG_PACKAGE_kmod-leds-lp55xx-common=y
 CONFIG_PACKAGE_kmod-lib-crc16=y
-# CONFIG_PACKAGE_kmod-mac80211-hwsim is not set
-# CONFIG_PACKAGE_kmod-mt76 is not set
-# CONFIG_PACKAGE_kmod-mt7601u is not set
-# CONFIG_PACKAGE_kmod-mt7603 is not set
-# CONFIG_PACKAGE_kmod-mt7615-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7622-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7663-firmware-ap is not set
-# CONFIG_PACKAGE_kmod-mt7663-firmware-sta is not set
-# CONFIG_PACKAGE_kmod-mt7663s is not set
-# CONFIG_PACKAGE_kmod-mt7663u is not set
-# CONFIG_PACKAGE_kmod-mt76x0e is not set
-# CONFIG_PACKAGE_kmod-mt76x0u is not set
-# CONFIG_PACKAGE_kmod-mt76x2 is not set
-# CONFIG_PACKAGE_kmod-mt76x2u is not set
-# CONFIG_PACKAGE_kmod-mt7915-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7916-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7921-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7921e is not set
-# CONFIG_PACKAGE_kmod-mt7921s is not set
-# CONFIG_PACKAGE_kmod-mt7921u is not set
-# CONFIG_PACKAGE_kmod-mt7922-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7925-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7925e is not set
-# CONFIG_PACKAGE_kmod-mt7925u is not set
-# CONFIG_PACKAGE_kmod-mt7981-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7992-23-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7992-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7996-233-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7996-firmware is not set
-# CONFIG_PACKAGE_kmod-mt7996e is not set
-CONFIG_PACKAGE_kmod-netlink-diag=y
-CONFIG_PACKAGE_kmod-nf-conncount=y
+CONFIG_PACKAGE_kmod-libphy=m
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
-CONFIG_PACKAGE_kmod-nf-ipt=y
-CONFIG_PACKAGE_kmod-nf-ipt6=y
-CONFIG_PACKAGE_kmod-nfnetlink-queue=y
-CONFIG_PACKAGE_kmod-nft-bridge=y
-CONFIG_PACKAGE_kmod-nft-compat=y
-CONFIG_PACKAGE_kmod-nft-queue=y
 CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
-CONFIG_PACKAGE_kmod-nls-ucs2-utils=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_kmod-oid-registry=y
-# CONFIG_PACKAGE_kmod-openvswitch is not set
-# CONFIG_PACKAGE_kmod-openvswitch-geneve is not set
-# CONFIG_PACKAGE_kmod-openvswitch-geneve-intree is not set
-# CONFIG_PACKAGE_kmod-openvswitch-gre is not set
-# CONFIG_PACKAGE_kmod-openvswitch-gre-intree is not set
-# CONFIG_PACKAGE_kmod-openvswitch-intree is not set
-# CONFIG_PACKAGE_kmod-openvswitch-lisp-intree is not set
-# CONFIG_PACKAGE_kmod-openvswitch-stt-intree is not set
-# CONFIG_PACKAGE_kmod-openvswitch-vxlan is not set
-# CONFIG_PACKAGE_kmod-openvswitch-vxlan-intree is not set
-# CONFIG_PACKAGE_kmod-pf-ring is not set
-# CONFIG_PACKAGE_kmod-rtw89-8922ae is not set
 CONFIG_PACKAGE_kmod-sched-act-vlan=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
+CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-flower=y
-CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
-CONFIG_PACKAGE_kmod-usb-storage=y
-CONFIG_PACKAGE_kmod-usb-storage-extras=y
-CONFIG_PACKAGE_kmod-usb-storage-uas=y
-CONFIG_PACKAGE_ksmbd-avahi-service=y
-CONFIG_PACKAGE_ksmbd-server=y
+CONFIG_PACKAGE_kmod-udptunnel4=y
+CONFIG_PACKAGE_kmod-udptunnel6=y
+CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_libatomic=y
-CONFIG_PACKAGE_libavahi-dbus-support=y
 CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libbpf=y
-CONFIG_PACKAGE_libcap=y
-CONFIG_PACKAGE_libcares=y
 CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libdaemon=y
 CONFIG_PACKAGE_libdbus=y
 CONFIG_PACKAGE_libe2p=y
 CONFIG_PACKAGE_libelf=y
-CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libevdev=y
 CONFIG_PACKAGE_libexpat=y
 CONFIG_PACKAGE_libext2fs=y
 CONFIG_PACKAGE_libf2fs=y
+CONFIG_PACKAGE_libgcrypt=y
 CONFIG_PACKAGE_libgmp=y
+CONFIG_PACKAGE_libgpg-error=y
 CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libiwinfo-data=y
-CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
-CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_liblucihttp-ucode=y
-CONFIG_PACKAGE_libminiupnpc=m
-CONFIG_PACKAGE_libnatpmp=m
+# CONFIG_PACKAGE_libmbedtls is not set
+CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnettle=y
 CONFIG_PACKAGE_libnfnetlink=y
@@ -197,48 +146,47 @@ CONFIG_PACKAGE_libopenssl-conf=y
 CONFIG_PACKAGE_libopenssl-legacy=y
 CONFIG_PACKAGE_libpcre2=y
 CONFIG_PACKAGE_libpthread=y
+CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libss=y
-CONFIG_PACKAGE_libstdcpp=y
-CONFIG_PACKAGE_libubus-lua=y
+CONFIG_PACKAGE_libstdcpp=m
 CONFIG_PACKAGE_libudev-zero=y
 CONFIG_PACKAGE_libusb-1.0=y
+# CONFIG_PACKAGE_libustream-mbedtls is not set
 CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_libuuid=y
-CONFIG_PACKAGE_libxml2=y
-CONFIG_PACKAGE_lua=y
-CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-dawn=y
-CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-package-manager=y
+CONFIG_PACKAGE_luci-app-pbr=y
 CONFIG_PACKAGE_luci-base=y
-CONFIG_PACKAGE_luci-i18n-dawn-ru=y
-CONFIG_PACKAGE_luci-i18n-attendedsysupgrade-ru=y
 CONFIG_PACKAGE_luci-i18n-base-ru=y
 CONFIG_PACKAGE_luci-i18n-filemanager-ru=y
 CONFIG_PACKAGE_luci-i18n-firewall-ru=y
 CONFIG_PACKAGE_luci-i18n-package-manager-ru=y
-CONFIG_PACKAGE_luci-lib-base=y
-CONFIG_PACKAGE_luci-lib-ip=y
-CONFIG_PACKAGE_luci-lib-json=y
-CONFIG_PACKAGE_luci-lib-jsonc=y
-CONFIG_PACKAGE_luci-lib-nixio=y
+CONFIG_PACKAGE_luci-i18n-pbr-ru=y
+CONFIG_PACKAGE_luci-lib-uqr=y
 CONFIG_PACKAGE_luci-light=y
-CONFIG_PACKAGE_luci-lua-runtime=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-mod-network=y
-CONFIG_PACKAGE_luci-mod-rpc=y
 CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
-CONFIG_PACKAGE_luci-ssl=y
+CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_mkf2fs=y
+CONFIG_PACKAGE_mt7601u-firmware=m
+# CONFIG_PACKAGE_odhcp6c is not set
+# CONFIG_PACKAGE_odhcpd-ipv6only is not set
+CONFIG_PACKAGE_openssh-keygen=y
+CONFIG_PACKAGE_openssh-moduli=y
+CONFIG_PACKAGE_openssh-server=y
+CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_openssl-util=y
-CONFIG_PACKAGE_px5g-mbedtls=y
+CONFIG_PACKAGE_pbr=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
@@ -247,46 +195,29 @@ CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rpcsys=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_rpcd-mod-ucode=y
-CONFIG_PACKAGE_socat=y
-CONFIG_PACKAGE_ss=y
+CONFIG_PACKAGE_rtl8922ae-firmware=m
+CONFIG_PACKAGE_sed=y
+CONFIG_PACKAGE_tc-tiny=y
+CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_ucode-mod-html=y
 CONFIG_PACKAGE_ucode-mod-log=y
-CONFIG_PACKAGE_ucode-mod-lua=y
 CONFIG_PACKAGE_ucode-mod-math=y
+CONFIG_PACKAGE_ucode-mod-socket=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
+CONFIG_PACKAGE_umdns=y
 CONFIG_PACKAGE_usbids=y
 CONFIG_PACKAGE_usbutils=y
-CONFIG_PACKAGE_wget-ssl=y
+CONFIG_PACKAGE_wireguard-tools=y
 # CONFIG_PACKAGE_wpad-basic-mbedtls is not set
 CONFIG_PACKAGE_wpad-openssl=y
-CONFIG_PACKAGE_wsdd2=y
-# CONFIG_PACKAGE_yafut is not set
-CONFIG_PACKAGE_zerotier=m
-CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -mcpu=cortex-a53"
+CONFIG_PKG_ASLR_PIE_ALL=y
+# CONFIG_PKG_ASLR_PIE_REGULAR is not set
+# CONFIG_PKG_CC_STACKPROTECTOR_REGULAR is not set
+CONFIG_PKG_CC_STACKPROTECTOR_STRONG=y
+# CONFIG_PKG_FORTIFY_SOURCE_1 is not set
+CONFIG_PKG_FORTIFY_SOURCE_2=y
+CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -mcpu=cortex-a53+crc+crypto"
 CONFIG_TARGET_OPTIONS=y
-CONFIG_VERSIONOPT=y
-CONFIG_VERSION_BUG_URL=""
-CONFIG_VERSION_CODE=""
-CONFIG_VERSION_CODE_FILENAMES=y
-CONFIG_VERSION_DIST="OpenWrt"
-CONFIG_VERSION_FILENAMES=y
-CONFIG_VERSION_FIRMWARE_URL=""
-CONFIG_VERSION_HOME_URL=""
-CONFIG_VERSION_HWREV=""
-CONFIG_VERSION_MANUFACTURER=""
-CONFIG_VERSION_MANUFACTURER_URL=""
-CONFIG_VERSION_NUMBER=""
-CONFIG_VERSION_PRODUCT=""
-CONFIG_VERSION_REPO=""
-CONFIG_VERSION_SUPPORT_URL=""
-# CONFIG_WIFI_SCRIPTS_UCODE is not set
-CONFIG_ZLIB_OPTIMIZE_SPEED=y
-# CONFIG_COLLECT_KERNEL_DEBUG is not set
-# CONFIG_IB is not set
-CONFIG_MAKE_TOOLCHAIN=y
-# CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
-CONFIG_PACKAGE_mt7601u-firmware=m
-CONFIG_PACKAGE_rtl8922ae-firmware=m
-# CONFIG_REPRODUCIBLE_DEBUG_INFO is not set
-# CONFIG_SDK is not set
+CONFIG_USE_GC_SECTIONS=y
+CONFIG_USE_LTO=y
